main-page header add

--- a/index/index.html
+++ b/index/index.html
@@ -9,11 +9,32 @@
 </head>
 <body>
     <!-- HEADERIO SPACE- AURA-->
-
-
-
+    <header class='d-flex'>
+        <nav class='left-nav'> <!-- PIRMA SEKCIJA KAIRĖJE -->
+            <div class='logo'> <!-- LOGO BOX -->
+                <img src="../img/LOGO.png" alt="Store logo">
+            </div>
+            <ul>
+                <li>Store</li>
+                <li>Community</li>
+                <li>Support</li>
+            </ul>
+        </nav>
+        <nav class='right-nav'> <!-- ANTRA SEKCIJA DEŠINĖJE -->
+            <ul>
+                <li><a href='#'>Login</a></li>
+                <li><a href='#'>Register</a></li>
+                <li><a href='#'>Languages</a>
+                    <ul class='lang-menu'> <!-- DROPDOWN BOX -->
+                        <li><a>Lietuvių | LT</a></li>
+                        <li><a>Anglų | ENG</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+    </header>
+                <!-- Header'io pabaiga, Main'o pradžia -->
     <Main>
-
         
         <!--- Main space part 1Rama was here-->
         <div class="mainPartOne">
