--- a/index/index.html
+++ b/index/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Internetine zaidimu parduotuve</title>
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="main_part_one_style.css"/>
   </head>
   <body>
     <!-- HEADERIO SPACE- AURA-->
@@ -36,7 +37,7 @@
                 <!-- Header'io pabaiga, Main'o pradžia -->
     <Main>
         
-        <!--- Main space part 1Rama was here-->
+        <!--- Main space part 1 Rama was here-->
         <div class="mainPartOne">
             <div class="mainOne">
                 <div class="carouselWBtns">
@@ -45,7 +46,7 @@
                         <div class="inner">
                             <div class="item">
                                 <div class="item1BigImg">
-                                    ITEM1
+                                    SITA SUMAZINSIU DAR!!!
                                 </div>
                                 <div class="itemBigHalf2">
                                     <div class="gameBigTitle">Game Title</div>
@@ -70,8 +71,10 @@
                                             <div class="tag">Tag3</div>
                                             <div class="tag">Massively multiplayer bla bla bla</div>
                                         </div>
-                                        <div class="item1Price">
-                                            Moola $
+                                        <div class="item1PriceContainer">
+                                          <div class="item1Price">
+                                              Moola $
+                                          </div>
                                         </div>
                                     </div>
                                 </div>
@@ -104,8 +107,10 @@
                                             <div class="tag">Tag3</div>
                                             <div class="tag">Massively multiplayer bla bla bla</div>
                                         </div>
-                                        <div class="item1Price">
-                                            Moola $
+                                        <div class="item1PriceContainer">
+                                          <div class="item1Price">
+                                              Moola $
+                                          </div>
                                         </div>
                                     </div>
                                 </div>
@@ -139,8 +144,10 @@
                                             <div class="tag">Tag3</div>
                                             <div class="tag">Massively multiplayer bla bla bla</div>
                                         </div>
-                                        <div class="item1Price">
-                                            Moola $
+                                        <div class="item1PriceContainer">
+                                          <div class="item1Price">
+                                              Moola $
+                                          </div>
                                         </div>
                                     </div>
                                 </div>
@@ -173,8 +180,10 @@
                                             <div class="tag">Tag3</div>
                                             <div class="tag">Massively multiplayer bla bla bla</div>
                                         </div>
-                                        <div class="item1Price">
-                                            Moola $
+                                        <div class="item1PriceContainer">
+                                          <div class="item1Price">
+                                              Moola $
+                                          </div>
                                         </div>
                                     </div>
                                 </div>
@@ -272,7 +281,6 @@
             </button>
           </div>
         </div>
-      </div>
 
       <!--Vieta Rokio reklamai//Main space part 2-->
 
@@ -285,11 +293,7 @@
         </div>
         <div class="item-2-bottom">
           <!-- !!! Not working href button -->
-          <button
-            href="../index/PAGE/login.html"
-            class="log-in-btn"
-            type="button"
-          >
+          <button href="../index/PAGE/login.html" class="log-in-btn" type="button">
             Sign In
           </button>
           <p class="item-2-bottom-p">
