--- a/index/index.html
+++ b/index/index.html
@@ -365,7 +365,24 @@
     </main>
 
     <!--Footah, Edgar goes here-->
-
+    <footer>
+      <div class="mainFooter">
+          <div class="FAQ">
+              <h1>Frequently Asked Questions (FAQ)</h1>
+                 <p><a href="">I received my game(s) as a gift, will I gain access to all features?</a></p>
+                  <p><a href="">How will know that I added exactly $5.00 USD to my Wallet?</a></p>
+                  <p><a href="">I recently added Wallet funds but they have not appeared, what do I do?</a></p>
+                  <p><a href=""> What kind of Steam Wallet and item listing restrictions apply?</a></p>
+          </div>
+          <div class="logo-end">
+              <div class="logo"> <img src="../img/LOGO.png" alt="logo"></div>
+              <div class="endFooter">
+                  <p>© 2022 Internetinė žaidimų parduotuvė. All rights reserved. All trademarks are property of their respective owners in the LTU and other countries.</p>
+                     <p> VAT included in all prices where applicable.   Privacy Policy   |    Legal    |   IŽP Subscriber Agreement   |   Refunds   |   Cookies</p>
+              </div>
+           </div>
+      </div>
+  </footer>
     <!-- Fontawesome scriptas del triangle-u-->
 
     <script
