--- a/index/index.html
+++ b/index/index.html
@@ -12,27 +12,27 @@
     <!-- HEADERIO SPACE- AURA-->
     <header class='d-flex'>
         <nav class='left-nav'> <!-- PIRMA SEKCIJA KAIRĖJE -->
-            <div class='logo'> <!-- LOGO BOX -->
+            <div class='store-logo'> <!-- LOGO BOX -->
                 <img src="../img/LOGO.png" alt="Store logo">
             </div>
             <ul>
-                <li>Store</li>
-                <li>Community</li>
-                <li>Support</li>
+                <li><a href='#'>Store</a></li>
+                <li><a href='#'>Community</a></li>
+                <li><a href='#'>Support</a></li>
             </ul>
         </nav>
-        <nav class='right-nav'> <!-- ANTRA SEKCIJA DEŠINĖJE -->
-            <ul>
-                <li><a href='#'>Login</a></li>
-                <li><a href='#'>Register</a></li>
-                <li><a href='#'>Languages</a>
-                    <ul class='lang-menu'> <!-- DROPDOWN BOX -->
-                        <li><a>Lietuvių | LT</a></li>
-                        <li><a>Anglų | ENG</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
+        <nav class="right-nav">
+          <ul>
+              <li><a href="#">Login</a></li>
+              <li><a href="#">Register</a>
+              <li><a href="#">Lietuvių | LT</a>
+                  <ul class="language-menu">
+                      <li><a href="#">Anglų | ENG</a></li>
+                      <li><a href="#">Lietuvių | LT</a></li>
+                  </ul>
+              </li>
+          </ul>
+      </nav>
     </header>
                 <!-- Header'io pabaiga, Main'o pradžia -->
     <Main>
