--- a/signup/index.html
+++ b/signup/index.html
@@ -46,8 +46,8 @@
       <label class="label-bottom">
         <input type="checkbox" name="confirm" value="agreement" />
         I am 13 years of age or older and agree to the terms of the
-        <a class="a" href="#">Subscriber Agreement</a> and the
-        <a class="a" href="#">Privacy Policy</a>.</label
+        <a class="bottom-links" href="#">Subscriber Agreement</a> and the
+        <a class="bottom-links" href="#">Privacy Policy</a>.</label
       >
 
       <a href="#" class="btn-form" type="button">Confirm</a>
