--- a/Sign Up/index.html
+++ b/Sign Up/index.html
@@ -8,6 +8,7 @@
     <title>Sign Up</title>
   </head>
 
+  <body>
   <!-- ! --------------------------Header/Navigation--------------------------------------------------------------- -->
   <header>
     <p>Header</p>
@@ -17,41 +18,44 @@
   <!-- ! --------------------------Main--------------------------------------------------------------- -->
 
   <main>
-    <form class="main-form">
+    <p class="errs">
+
+    </p>
+    <form class="main-form" id="signUpForm">
       <h3 class="form-h3">Create your personal account</h3>
       <label class="main-label">Username</label>
-      <input class="main-input" type="text" id="username" />
+      <input class="main-input" type="text" id="username" required/>
       <label class="main-label">Surname</label>
-      <input class="main-input" type="text" id="surname" />
+      <input class="main-input" type="text" id="surname" required/>
       <label class="main-label">Email</label>
-      <input class="main-input" type="email" id="surname" />
-      <label class="main-select-label" for="country"
-        >Country of Residence</label
-      >
+      <input class="main-input" type="email" id="email" required/>
+      <label class="main-select-label" for="country">Country of Residence</label>
       <select
         class="main-select"
         id="country"
         name="countrylist"
         form="countryform"
-      >
+        required>
         <option value="----">----</option>
         <option value="----">----</option>
         <option value="----">----</option>
         <option value="----">----</option>
       </select>
       <label class="main-label">Password</label>
-      <input class="main-input" type="password" id="password" />
+      <input class="main-input" type="password" id="password" required/>
       <label class="main-label">Repeat Password</label>
-      <input class="main-input" type="password" id="reapeat-password" />
+      <input class="main-input" type="password" id="repeat-password" required/>
       <label class="label-bottom">
-        <input type="checkbox" name="confirm" value="agreement" />
+        <input type="checkbox" name="confirm" id="agreement" value="agreement" required/>
         I am 13 years of age or older and agree to the terms of the
         <a class="a" href="#">Subscriber Agreement</a> and the
         <a class="a" href="#">Privacy Policy</a>.</label
       >
 
-      <a href="#" class="btn-form" type="button">Confirm</a>
+      <input type="submit" class="btn-form" id="signUpSubmit" value="Confirm"/>
     </form>
+
+    <script src="signup.js" type="module"></script>
   </main>
 
   <!-- ! --------------------------Footer--------------------------------------------------------------- -->
@@ -59,5 +63,5 @@
     <p>Footer</p>
   </footer>
   <!-- ! --------------------------Footer--------------------------------------------------------------- -->
-  <body></body>
+  </body>
 </html>
