--- a/index/index.html
+++ b/index/index.html
@@ -26,7 +26,7 @@
       <nav class="right-nav">
         <ul>
           <li><a href="../PAGE/login.html">Login</a></li>
-          <li><a href="../PAGE/signup.html">Sign up</a></li>
+          <li><a href="../signup/index.html">Sign up</a></li>
           <li>
             <a href="#">Lietuvių | LT</a>
             <ul class="language-menu">
