--- a/index/index.html
+++ b/index/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Internetine zaidimu parduotuve</title>
-    <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="main_part_one_style.css" />
-    <link rel="stylesheet" href="signup.css" />
+    <link rel="stylesheet" href="CSS/index.css" />
+    <link rel="stylesheet" href="CSS/main_part_one_style.css" />
+    <link rel="stylesheet" href="CSS/register.css" />
+    <link rel="stylesheet" href="CSS/login.css"/>
   </head>
   <body>
     <!-- HEADERIO SPACE- AURA-->
