--- a/login/index.html
+++ b/login/index.html
@@ -43,7 +43,7 @@
     </main>
 
     <!-- ! --------------------------Footer--------------------------------------------------------------- -->
-    <footer>
+    <footer class='footer'>
       <p>Footer</p>
     </footer>
     <!-- ! --------------------------Footer--------------------------------------------------------------- -->
