--- a/index/index.html
+++ b/index/index.html
@@ -64,7 +64,7 @@
               <div class="inner">
                 <div class="item">
                   <div class="item1BigImg">
-                    <video width="470" controls>
+                    <video width="470" class="videoPlayer"controls>
                       <source src="https://cdn.akamai.steamstatic.com/steam/apps/256863087/movie480_vp9.webm?t=1638454279.mp4" type="video/mp4">
                     </video>
                   </div>
@@ -84,14 +84,14 @@
                         <div class="tag">Gore</div>
                       </div>
                       <div class="item1PriceContainer">  
-                        <div class="item1Price"> <button><a href="">Buy 31,99$</a></button></div>
+                        <div class="item1Price"><button class="item1Button">Buy 31,99$</button></div>
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="item">
                   <div class="item1BigImg">
-                    <video width="470" controls>
+                    <video width="470" class="videoPlayer" controls>
                      <source src="https://cdn.akamai.steamstatic.com/steam/apps/256864004/movie480_vp9.webm?t=1639001817.mp4" type="video/mp4">
                   </video>
                 </div>
@@ -111,20 +111,20 @@
                         <div class="tag">Mythology</div>
                       </div>
                       <div class="item1PriceContainer">
-                        <div class="item1Price"><button><a href="">Buy 49,99$</a></button></div>
+                        <div class="item1Price"><button class="item1Button">Buy 49,99$</button></div>
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="item">
                   <div class="item1BigImg">
-                    <video width="470" controls>
+                    <video width="470" class="videoPlayer" controls>
                       <source src="https://cdn.akamai.steamstatic.com/steam/apps/256768371/movie480.webm?t=1574881352.mp4" 
                       type="video/mp4">
                     </video>
                   </div>
                   <div class="itemBigHalf2">
-                    <div class="gameBigTitle"><a href="">Red Dead Redemption 2</a> </div>
+                    <div class="gameBigTitle"><button class="item1Button">Red Dead Redemption 2</button> </div>
                     <div class="item1Group">
                       <div class="slot slot1"><img src="https://cdn.akamai.steamstatic.com/steam/apps/1174180/ss_66b553f4c209476d3e4ce25fa4714002cc914c4f.600x338.jpg?t=1618851907" alt=""></div>
                       <div class="slot slot2"><img src="https://cdn.akamai.steamstatic.com/steam/apps/1174180/ss_bac60bacbf5da8945103648c08d27d5e202444ca.600x338.jpg?t=1618851907" alt=""></div>
@@ -139,14 +139,14 @@
                         <div class="tag">Story rich</div>
                       </div>
                       <div class="item1PriceContainer">
-                        <div class="item1Price"><button><a href="">Buy 59,99$</a></button></div>
+                        <div class="item1Price"><button class="item1Button">Buy 59,99$</button></div>
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="item">
                   <div class="item1BigImg">
-                    <video width="470" controls>
+                    <video width="470" class="videoPlayer" controls>
                       <source src="https://cdn.akamai.steamstatic.com/steam/apps/256776470/movie480.webm?t=1585225680.mp4" 
                       type="video/mp4">
                     </video>
@@ -167,7 +167,7 @@
                         <div class="tag">Mystery</div>
                       </div>
                       <div class="item1PriceContainer">
-                        <div class="item1Price"><button><a href="">Buy 49,99$</a></button></div>
+                        <div class="item1Price"><button class="item1Button">Buy 49,99$</button></div>
                       </div>
                     </div>
                   </div>
