fixed first FAQ question

--- a/index/index.html
+++ b/index/index.html
@@ -573,10 +573,9 @@
         <h4>Need Help? We've got you covered'</h4>
 
         <a href='#firstTopic'>
-          <p class='faqQuestions' onclick='transitionFAQThird()'>I recently added Wallet funds but they have not
-            appeared,
-            what do
-            I do?</p>
+          <p class='faqQuestions' onclick='transitionFAQThird()'>I received my game(s) as a gift, will I gain access to
+            all
+            features?</p>
         </a>
         <div class="display-none">
           <div class="closeFormBtn">&times;</div>
@@ -611,10 +610,10 @@
         </div>
 
         <a href="#thirdTopic">
-        <p class="faqQuestions" onclick="transitionFAQThird()">
-          I recently added Wallet funds but they have not appeared, what do I
-          do?
-        </p>
+          <p class="faqQuestions" onclick="transitionFAQThird()">
+            I recently added Wallet funds but they have not appeared, what do I
+            do?
+          </p>
         </a>
         <div class="display-none">
           <div class="closeFormBtn" type="button">&times;</div>
@@ -630,9 +629,9 @@
         </div>
 
         <a href="#fourthTopic">
-        <p class="faqQuestions" onclick="transitionFAQFourth()">
-          What kind of Steam Wallet and item listing restrictions apply?
-        </p>
+          <p class="faqQuestions" onclick="transitionFAQFourth()">
+            What kind of Steam Wallet and item listing restrictions apply?
+          </p>
         </a>
         <div class="display-none">
           <div class="closeFormBtn" type="button">&times;</div>
