fixed form question animation

--- a/index/index.html
+++ b/index/index.html
@@ -577,7 +577,7 @@
         <h4>Need Help? We've got you covered'</h4>
 
         <a href="#firstTopic">
-          <p class="faqQuestions" onclick='transitionFAQThird()'>I received my game(s) as a gift, will I gain access to
+          <p class="faqQuestions" onclick='transitionFAQFirst()'>I received my game(s) as a gift, will I gain access to
             all
             features?</p>
         </a>
@@ -586,7 +586,6 @@
           <form>
             <label for="username">Username</label>
             <input type="text" id="username" name="username" />
-            <!-- placeholder="Account username..."  -->
             <label for="topic"></label>
             <input type="text" id="topic" name="topic" placeholder="Topic..." />
             <label for="question"></label>
